results and menu

--- a/Results.html
+++ b/Results.html
@@ -2,8 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8">
     <title></title>
   </head>
   <body>
@@ -27,50 +27,64 @@
     </div>
   </nav>
 </div>
-<h2>Characteristics:</h2><br>
-<table class="table">
-  <thead>
+    <table class="table">
+  <thead class="thead-dark">
     <tr>
-      <th scope="col"><input type="checkbox"/>  Agressive</th>
-      <th scope="col">2</th>
-      <th scope="col">35</th>
-      <th scope="col">60</th>
+      <th scope="col">#</th>
+      <th scope="col">Name</th>
+      <th scope="col">Results</th>
+      <th scope="col">Age</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th scope="row"><input type="checkbox"/>  Passive</th>
-      <td>3</td>
-      <td>6</td>
+      <th scope="row"><input type="checkbox"/>  1</th>
+      <td>Mark</td>
+      <td>49</td>
+      <td>37</td>
+    </tr>
+    <tr>
+      <th scope="row"><input type="checkbox"/>  2</th>
+      <td>Jacob</td>
+      <td>34</td>
+      <td>26</td>
+    </tr>
+    <tr>
+      <th scope="row"><input type="checkbox"/>  3</th>
+      <td>Larry</td>
       <td>16</td>
+      <td>36</td>
+    </tr>
+  </tbody>
+  <thead class="thead-light">
+    <tr>
+      <th scope="col"><input type="checkbox"/>  4</th>
+      <th scope="col">Kate</th>
+      <th scope="col">32</th>
+      <th scope="col">30</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row"><input type="checkbox"/>  5</th>
+      <td>Mark</td>
+      <td>33</td>
+      <td>41</td>
     </tr>
     <tr>
-      <th scope="row"><input type="checkbox"/>  Positive</th>
-      <td>7</td>
-      <td>9</td>
-      <td>9</td>
+      <th scope="row"><input type="checkbox"/>  6</th>
+      <td>Jacob</td>
+      <td>20</td>
+      <td>46</td>
     </tr>
     <tr>
-      <th scope="row"><input type="checkbox"/>  Persistent</th>
-      <td>2</td>
-      <td>16</td>
-      <td>30</td>
-    </tr>
-    <tr>
-      <th scope="row"><input type="checkbox"/>  Active</th>
-      <td>2</td>
-      <td>35</td>
-      <td>5</td>
-    </tr>
-    <tr>
-      <th scope="row"><input type="checkbox"/>  Reliable</th>
-      <td>2</td>
-      <td>2</td>
-      <td>45</td>
+      <th scope="row"><input type="checkbox"/>  7</th>
+      <td>Inna</td>
+      <td>68</td>
+      <td>27</td>
     </tr>
   </tbody>
 </table>
-  <button type="button" name="button">Details</button>
-  <button type="button" name="button">New</button>
+    <button type="button" name="button">Contact</button>
   </body>
 </html>
