--- a/login.html
+++ b/login.html
@@ -16,9 +16,16 @@
         </div>
       </div>
   <nav class="navbar navbar-dark bg-dark">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="dropdown">
+    <button class="navbar-toggler" type="dropbtn" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
+      </button>
+    <div class="dropdown-content dropdown-menu" area-labelledby="dropdown">
+      <a href="login.html">Login</a>
+      <a href="menu.html">Menu</a>
+      <a href="results.html">Results</a>
+    </div>
+    </div>
   </nav>
 </div>
     <div class="container">
