--- a/menu.html
+++ b/menu.html
@@ -1,15 +1,31 @@
 <html>
     <head>
-        <script src="./face-api.js" type="text/javascript"></script>
-        <script src="./drawing.js" type="text/javascript"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/tensorflow/0.15.0/tf.min.js" type="text/javascript"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
-
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
+      <div class="pos-f-t">
+        <div class="collapse" id="navbarToggleExternalContent">
+          <div class="bg-dark p-4">
+            <h5 class="text-white h4">Collapsed content</h5>
+            <span class="text-muted">Toggleable via the navbar brand.</span>
+          </div>
+        </div>
+    <nav class="navbar navbar-dark bg-dark">
+      <div class="dropdown">
+      <button class="navbar-toggler" type="dropbtn" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+      <div class="dropdown-content dropdown-menu" area-labelledby="dropdown">
+        <a href="login.html">Login</a>
+        <a href="menu.html">Menu</a>
+        <a href="results.html">Results</a>
+      </div>
+      </div>
+    </nav>
+  </div>
         <div class="container">
-            <img id="myImg" src="">
+            <img id="myImg" src="imgs/logo.jpg">
             <canvas id="overlay" width="0" height="0" ></canvas>
         </div>
 
