--- a/menu.html
+++ b/menu.html
@@ -24,11 +24,23 @@
       </div>
     </nav>
   </div>
-        <div class="container">
-            <img id="myImg" src="imgs/logo.jpg">
+        <div class="container1">
+            <img id="myImg" src="imgs/logo.jpg" class="center">
             <canvas id="overlay" width="0" height="0" ></canvas>
         </div>
+        <div class="container">
+          <img src="imgs/catman.jpg" alt="Avatar" style="width:90px">
+          <p><span>Chris Fox.</span> CEO at Mighty Schools.</p>
+          <p>Chrisfox@hotmail.com</p>
+          <p>+49256331587</p>
+        </div>
 
+        <div class="container">
+          <img src="imgs/catster1.jpg" alt="Avatar" style="width:90px">
+          <p><span >Rebecca Flex.</span> CEO at Company.</p>
+          <p>Rebeca@gmail.com</p>
+          <p>+32488225632</p>
+        </div>
         <div id="console"></div>
         <div id="btn">
             Картинка:
