--- a/menu.html
+++ b/menu.html
@@ -28,11 +28,13 @@
             <img id="myImg" src="imgs/logo.jpg" class="center">
             <canvas id="overlay" width="0" height="0" ></canvas>
         </div>
+        <h2>Participants:</h2>
         <div class="container">
           <img src="imgs/catman.jpg" alt="Avatar" style="width:90px">
           <p><span>Chris Fox.</span> CEO at Mighty Schools.</p>
           <p>Chrisfox@hotmail.com</p>
           <p>+49256331587</p>
+          <button type="button" name="button">Contact</button>
         </div>
 
         <div class="container">
@@ -40,12 +42,9 @@
           <p><span >Rebecca Flex.</span> CEO at Company.</p>
           <p>Rebeca@gmail.com</p>
           <p>+32488225632</p>
+            <button type="button" name="button">Contact</button>
         </div>
-        <div id="console"></div>
-        <div id="btn">
-            Картинка:
-            <input id="myFileUpload" type="file" accept=".jpg, .jpeg, .png">
-        </div>
+
         <script>
             function getFaceDetectorOptions() {
                 return new faceapi.SsdMobilenetv1Options({ minConfidence: 0.5 })
