--- a/example_video.html
+++ b/example_video.html
@@ -8,26 +8,18 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-      <div class="pos-f-t">
-        <div class="collapse" id="navbarToggleExternalContent">
-          <div class="bg-dark p-4">
-            <h5 class="text-white h4">Collapsed content</h5>
-            <span class="text-muted">Toggleable via the navbar brand.</span>
-          </div>
+      <nav class="navbar navbar-dark bg-dark">
+        <div class="dropdown">
+        <button class="navbar-toggler" type="dropbtn" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+          </button>
+        <div class="dropdown-content dropdown-menu" area-labelledby="dropdown">
+          <a href="login.html">Login</a>
+          <a href="menu.html">Menu</a>
+          <a href="results.html">Results</a>
         </div>
-    <nav class="navbar navbar-dark bg-dark">
-      <div class="dropdown">
-      <button class="navbar-toggler" type="dropbtn" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-      <div class="dropdown-content dropdown-menu" area-labelledby="dropdown">
-        <a href="login.html">Login</a>
-        <a href="menu.html">Menu</a>
-        <a href="results.html">Results</a>
-      </div>
-      </div>
-    </nav>
-  </div>
+        </div>
+      </nav>
         <div class="container">
             <video id="inputVideo" autoplay muted></video>
             <canvas id="overlay" ></canvas>
@@ -80,5 +72,6 @@
                     });
             });
         </script>
+        <button type="button" name="button">Finish</button>
     </body>
 </html>
