--- a/menu.html
+++ b/menu.html
@@ -4,13 +4,6 @@
         <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
-      <div class="pos-f-t">
-        <div class="collapse" id="navbarToggleExternalContent">
-          <div class="bg-dark p-4">
-            <h5 class="text-white h4">Collapsed content</h5>
-            <span class="text-muted">Toggleable via the navbar brand.</span>
-          </div>
-        </div>
     <nav class="navbar navbar-dark bg-dark">
       <div class="dropdown">
       <button class="navbar-toggler" type="dropbtn" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,65 +16,23 @@
       </div>
       </div>
     </nav>
-  </div>
         <div class="container1">
             <img id="myImg" src="imgs/logo.jpg" class="center">
-            <canvas id="overlay" width="0" height="0" ></canvas>
-        </div>
-        <h2>Participants:</h2>
-        <div class="container">
-          <img src="imgs/catman.jpg" alt="Avatar" style="width:90px">
-          <p><span>Chris Fox.</span> CEO at Mighty Schools.</p>
-          <p>Chrisfox@hotmail.com</p>
-          <p>+49256331587</p>
-          <button type="button" name="button">Contact</button>
+            <h2>Participants:</h2>
         </div>
 
+        <div class="container">
+
+          <img src="imgs/catman.jpg" alt="Avatar" style="width:90px">
+          <p><span>Chris Fox.(39)</span> CEO at Mighty Schools.</p>
+          <p>Chrisfox@hotmail.com</p>
+          <a class="btn btn-secondary" role="button" name="button" href="tel:+49256331587">Call</a>
+        </div>
         <div class="container">
           <img src="imgs/catster1.jpg" alt="Avatar" style="width:90px">
-          <p><span >Rebecca Flex.</span> CEO at Company.</p>
+          <p><span >Rebecca Flex.(27)</span> CEO at Company.</p>
           <p>Rebeca@gmail.com</p>
-          <p>+32488225632</p>
-            <button type="button" name="button">Contact</button>
+          <a class="btn btn-secondary" role="button" name="button" href="tel:+32488556235">Call</a>
         </div>
-
-        <script>
-            function getFaceDetectorOptions() {
-                return new faceapi.SsdMobilenetv1Options({ minConfidence: 0.5 })
-            }
-
-            function init() {
-                $('#btn').show();
-                $('#myFileUpload').change(function (e) {
-                    const imgFile = $('#myFileUpload')[0].files[0];
-                    $('#console').text('GET PICTURE');
-                    // create an HTMLImageElement from a Blob
-                    faceapi.bufferToImage(imgFile).then((img) => {
-                        $('#myImg')[0].src = img.src;
-
-                        $('#console').text('DETECTION');
-                        faceapi.detectAllFaces($('#myImg')[0], getFaceDetectorOptions())
-                            .withFaceExpressions()
-                            .then((r) => {
-                                $('#console').text('GUUT');
-                                console.log(r);
-                                drawExpressions($('#myImg').get(0), $('#overlay').get(0), r, 0.5, true)
-                            });
-
-                    });
-                });
-            }
-
-            $(document).ready(() => {
-                $('#btn').hide();
-                $('#console').text('START');
-                faceapi.loadSsdMobilenetv1Model('./weights')
-                    .then(() => faceapi.loadFaceExpressionModel('./weights'))
-                    .then(() => {
-                        $('#console').text('MODEL LOADED');
-                        init();
-                    });
-            });
-        </script>
     </body>
 </html>
