--- a/characteristics.html
+++ b/characteristics.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <title></title>
   </head>
-  <body>  
+  <body>
     <nav class="navbar navbar-dark bg-dark">
       <div class="dropdown">
       <button class="navbar-toggler" type="dropbtn" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,7 +62,8 @@
     </tr>
   </tbody>
 </table>
-  <button type="button" name="button">Details</button>
-  <button type="button" name="button">New</button>
+<a class="btn btn-secondary" role="button" name="button" href="menu.html">Details</a>
+<a class="btn btn-secondary" role="button" name="button" href="example_video.html">New</a>
+
   </body>
 </html>
