--- a/example_video.html
+++ b/example_video.html
@@ -72,6 +72,7 @@
                     });
             });
         </script>
-        <button type="button" name="button">Finish</button>
+        <a class="btn btn-secondary" role="button" name="button" href="characteristics.html">Finish</a>
+      
     </body>
 </html>
